--- a/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
@@ -4,7 +4,7 @@
   <div class="card-owner-list">
     <div class="card-owner-list">
       <div class="card-header" role="tab" id="heading_<%= proposition.id %>">
-        <h5 class="mb-0">
+        <!-- <h5 class="mb-0"> -->
           <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#proposition-content_<%= proposition.id %>" aria-expanded="false" aria-controls="proposition-content_<%= proposition.id %>">
             <div class="product">
               <div class="container">
@@ -33,7 +33,7 @@
              </div>
            </div>
          </a>
-       </h5>
+       <!-- </h5> -->
      </div>
      <div id="proposition-content_<%= proposition.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= proposition.id %>">
       <div class="card-block">
