--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -4,12 +4,12 @@
   <div class="card-owner-list">
     <div class="card-owner-list">
       <div class="card-header" role="tab" id="heading_<%= brief.id %>">
-        <h5 class="mb-0">
+        <!-- <h5 class="mb-0"> -->
           <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#brief-content_<%= brief.id %>" aria-expanded="false" aria-controls="brief-content_<%= brief.id %>">
             <div class="product">
               <div class="container">
                 <div class="row">
-                  <div class="col-xs-12">
+                  <!-- <div class="col-xs-12"> -->
                    <div class="col-xs-12 col-md-2">
                       <% avatar_url = brief.user.facebook_picture_url || "default-avatar.jpg" %>
                       <%= image_tag avatar_url, class: "product-image" %>
@@ -27,12 +27,12 @@
                        <br>
                        <span class="badge badge-default"><%= brief.status %></span>
                     </div>
-                  </div>
+                  <!-- </div> -->
                 </div>
               </div>
             </div>
           </a>
-        </h5>
+        <!-- </h5> -->
       </div>
       <div id="brief-content_<%= brief.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= brief.id %>">
         <div class="card-block">
