--- a/app/views/propositions/_proposition_if_user_is_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_owner.html.erb
@@ -5,12 +5,12 @@
  <div class="card-owner-list">
    <div class="card-owner-list">
      <div class="card-header" role="tab" id="heading_<%= proposition.id %>">
-       <h5 class="mb-0">
+       <!-- <h5 class="mb-0"> -->
          <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#proposition-content_<%= proposition.id %>" aria-expanded="false" aria-controls="proposition-content_<%= proposition.id %>">
            <div class="product">
              <div class="container">
                <div class="row">
-                 <div class="col-xs-12">
+                 <!-- <div class="col-xs-12"> -->
                    <div class="col-xs-12 col-md-2">
                      <% avatar_url = brief.user.facebook_picture_url || "default-avatar.jpg" %>
                      <%= image_tag avatar_url, class: "product-image" %>
@@ -29,12 +29,12 @@
                      <br>
                      <span class="badge badge-default"><%= proposition.status %></span>
                    </div>
-                 </div>
+                 <!-- </div> -->
                </div>
              </div>
            </div>
          </a>
-       </h5>
+       <!-- </h5> -->
      </div>
      <div id="proposition-content_<%= proposition.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= proposition.id %>">
       <div class="card-block">
