--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -11,10 +11,12 @@
               Le guide qui accompagne les <span class="color-animation"></span> <br> dans leur recherche de <em class="color-animation"></em>
             </p>
           </div>
-            <%= simple_form_for :coworking, :method => 'get', :html => {:class => 'form-search-banner'}, url: coworkings_path do |f| %>
+          <%= simple_form_for :coworking, :method => 'get', :html => {:class => 'form-search-banner'}, url: coworkings_path do |f| %>
             <%= f.input_field :address, placeholder: "Où rêvez-vous de travailler ?", class: "search-query" %>
-            <span><%= f.submit "Rechecher", class: "btn btn-primary btn-search", style:"text-decoration:none" %>
-            <% end %></span>
+            <span>
+              <%= f.submit "Rechercher", class: "btn btn-primary btn-search", style:"text-decoration:none" %>
+            </span>
+          <% end %>
         </div>
       </div>
     </div>
