--- a/app/views/coworkings/_card.html.erb
+++ b/app/views/coworkings/_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card-coworking" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0)),url('<%= image_url %>')">
-  <%= link_to "", coworking_path(coworking), class:"card-link", target: :_blank %>
+  <%= link_to "", coworking_path(coworking), class:"card-link" %>
   <div class="card-category"><%= coworking.name %></div>
   <div class="card-price">
   <% if coworking.price_per_month != nil %>
