--- a/app/views/demands/edit.html.erb
+++ b/app/views/demands/edit.html.erb
@@ -91,7 +91,7 @@
           <h2>Avez-vous des besoins spécifiques que vous souhaiteriez partager dès maintenant ?</h2>
           <div class="row">
             <div class="col-xs-12">
-            <%= f.input :other_spec, label: "Détails", hint: "Un besoin spécifique peut être par exemple: un grand plateau type industriel, une très grande salle de réunion, une terrasse, une contrainte de confidentialité, un besoin en salle serveurs, etc.", placeholder: "Nous recherchons un espace atypique avec une grande hauteur sous plafond..." %>
+            <%= f.input :other_spec, as: :text, :input_html => {:rows => 10}, label: "Détails", hint: "Un besoin spécifique peut être par exemple: un grand plateau type industriel, une très grande salle de réunion, une terrasse, une contrainte de confidentialité, un besoin en salle serveurs, etc.", placeholder: "Nous recherchons un espace atypique avec une grande hauteur sous plafond..." %>
             </div>
           </div>
                 <%= f.submit "Mettre à jour mon cahier des charges", class: "btn btn-primary btn-block" %>
