--- a/app/views/briefs/_my_briefs.html.erb
+++ b/app/views/briefs/_my_briefs.html.erb
@@ -1,24 +1,18 @@
-<!-- <div class="wrapper-pages"> -->
-  <div class="container">
-    <div class="row">
-      <% unless current_user.owner %>
-      <!-- <div class="col-xs-12"> -->
-<!-- condition owner true or false  -->
-<!-- début de l'itération user n'est pas owner  -->
-        <%= render 'briefs/brief_if_user_is_not_owner' %>
-<!-- fin du contenu de la modal si user n'est pas owner -->
-      <!-- </div> -->
-      <% else %>
-      <!-- <div class="col-xs-12"> -->
-<!-- début de l'itération user est owner  -->
-        <%= render 'briefs/brief_if_user_is_owner' %>
-<!-- fin du contenu de la modal si user est owner -->
-      <!-- </div> -->
-<!-- fin de la condition owner true or false  -->
-      <% end %>
-    </div>
+<div class="container">
+  <div class="row">
+    <% unless current_user.owner %>
+    <!-- condition owner true or false  -->
+    <!-- début de l'itération user n'est pas owner  -->
+    <%= render 'briefs/brief_if_user_is_not_owner' %>
+    <!-- fin du contenu si user n'est pas owner -->
+    <% else %>
+    <!-- début de l'itération user est owner  -->
+    <%= render 'briefs/brief_if_user_is_owner' %>
+    <!-- fin du contenu si user est owner -->
+    <!-- fin de la condition owner true or false  -->
+    <% end %>
   </div>
-<!-- </div> -->
+</div>
 
 
 
