dashboard clean test

--- a/app/views/briefs/_brief_if_user_is_not_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_not_owner.html.erb
@@ -29,7 +29,7 @@
              </a>
          </div>
          <div id="brief-content_<%= brief.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= brief.id %>">
-             <div class="card-block">
+             <!-- <div class="card-block"> -->
                <div class="brief-content">
                  <div class="container">
                    <div class="row">
@@ -103,7 +103,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          <!-- </div> -->
         </div>
       </div>
     </div>
