--- a/app/views/briefs/_brief_if_user_is_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_owner.html.erb
@@ -35,7 +35,7 @@
         <!-- </h5> -->
       </div>
       <div id="brief-content_<%= brief.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= brief.id %>">
-        <div class="card-block">
+        <!-- <div class="card-block"> -->
          <div class="brief-content">
            <div class="container">
              <div class="row">
@@ -98,7 +98,7 @@
             </div>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
   </div>
 </div>
