--- a/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
@@ -31,8 +31,9 @@
            </a>
        </div>
        <div id="proposition-content_<%= proposition.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= proposition.id %>">
-          <div class="card-block">
+          <!-- <div class="card-block"> -->
             <div class="proposition-content">
+            <div class="container">
               <div class="row">
                <%# unless proposition.brief.contracts.blank? %>
                <div class="col-xs-12 col-md-6">
