--- a/app/views/propositions/_proposition_if_user_is_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_owner.html.erb
@@ -32,7 +32,7 @@
            </a>
        </div>
        <div id="proposition-content_<%= proposition.id %>" class="collapse" role="tabpanel" aria-labelledby="heading_<%= proposition.id %>">
-        <div class="card-block">
+        <!-- <div class="card-block"> -->
           <div class="proposition-content">
             <div class="container">
             <div class="row">
@@ -111,7 +111,7 @@
         </div>
       </div>
     </div>
-  </div>
+  <!-- </div> -->
   </div>
   </div>
   </div>
