--- a/app/views/demands/_my_demands.html.erb
+++ b/app/views/demands/_my_demands.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.demands.blank? %>
-<div class="wrapper-pages">
+<!-- <div class="wrapper-pages"> -->
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
@@ -17,9 +17,9 @@
       </div>
     </div>
   </div>
-</div>
+<!-- </div> -->
 <% else %>
-<div class="wrapper-pages">
+<!-- <div class="wrapper-pages"> -->
 <% current_user.demands.each do |demand| %>
 <div class="container">
   <div class="row">
@@ -119,7 +119,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      <!-- </div> -->
     </div>
   </div>
 </div>
