--- a/app/assets/stylesheets/components/_badge.scss
+++ b/app/assets/stylesheets/components/_badge.scss
@@ -22,3 +22,40 @@
     margin: 0 -4px 12px 0;
   }
 }
+
+.badge_message_dropdown {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 0 20px;
+
+  & a {
+    padding: 0;
+    z-index: 2;
+    -webkit-transition: color 0.3s ease;
+    transition: color 0.3s ease;
+    font-weight: lighter !important;
+    color: $my-gray !important;
+    font-size: 15px !important;
+    line-height: 22px !important;
+    padding: 10px 20px;
+    position: relative;
+    right: 46px;
+    text-decoration: none;
+  }
+  & p {
+    background: $my-green;
+    color: white;
+    border-radius: 100px;
+    padding: 3px 6px;
+    font-size: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 11px;
+    top: 6px;
+  }
+
+}
