--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -118,7 +118,7 @@
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: $my-green !important;
+  color: $my-gray !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
