--- a/app/views/mailbox/sentbox.html.erb
+++ b/app/views/mailbox/sentbox.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @sent } %>
+<div class="content-wrapper">
+  <%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @sent } %>
+</div>
