--- a/app/views/mailbox/trash.html.erb
+++ b/app/views/mailbox/trash.html.erb
@@ -1,1 +1,3 @@
+<div class="content-wrapper">
 <%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @trash } %>
+</div>
