--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper-pages">
+<div class="content-wrapper">
   <div class="contact-background-image" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 0%), url('<%= image_path('parisjungle2.jpg')%>');">
     <div class="container">
       <div class="row">
