--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,3 +1,4 @@
+<div class="content-wrapper">
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
@@ -35,6 +36,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 
 
