--- a/app/views/demands/_my_demands.html.erb
+++ b/app/views/demands/_my_demands.html.erb
@@ -1,3 +1,4 @@
+<div class="content-wrapper">
 <% if current_user.demands.blank? %>
 <!-- <div class="wrapper-pages"> -->
   <div class="container">
@@ -127,4 +128,4 @@
 <% end %>
 </div>
 <% end %>
-
+</div>
