--- a/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
+++ b/app/views/propositions/_proposition_if_user_is_not_owner.html.erb
@@ -1,3 +1,4 @@
+<div class="content-wrapper">
 <% current_user.briefs.each do |brief| %>
 <% brief.propositions.each do |proposition| %>
   <div id="accordion" role="tablist" aria-multiselectable="true">
@@ -112,4 +113,4 @@
   </div>
 <% end %>
 <% end %>
-
+</div>
