--- a/app/views/briefs/_brief_if_user_is_not_owner.html.erb
+++ b/app/views/briefs/_brief_if_user_is_not_owner.html.erb
@@ -1,3 +1,4 @@
+ <div class="content-wrapper">
  <% current_user.briefs.each do |brief| %>
    <div id="accordion" role="tablist" aria-multiselectable="true">
      <div class="card-owner-list">
@@ -98,3 +99,4 @@
       </div>
     </div>
 <% end %>
+</div>
