--- a/app/views/coworkings/_coworkings_list_dashboard.html.erb
+++ b/app/views/coworkings/_coworkings_list_dashboard.html.erb
@@ -1,12 +1,13 @@
-<div class="container-coworking-index">
-  <div class="row">
-    <div class="col-xs-12">
-      <% current_user.coworkings.each do |coworking| %>
-      <div class="col-xs-12 col-md-6">
-        <%= render 'coworkings/card', coworking: coworking, image_url: cl_image_path(coworking.photos.first.path, aspect_ratio: 4, crop: :crop)  %>
+<div class="content-wrapper">
+  <div class="container-coworking-index">
+    <div class="row">
+      <div class="col-xs-12">
+        <% current_user.coworkings.each do |coworking| %>
+        <div class="col-xs-12 col-md-6">
+          <%= render 'coworkings/card', coworking: coworking, image_url: cl_image_path(coworking.photos.first.path, aspect_ratio: 4, crop: :crop)  %>
+        </div>
+        <% end %>
       </div>
-      <% end %>
     </div>
   </div>
 </div>
-
