tarifs et offres et CGU template

--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -1,8 +1,67 @@
 <div class="content-wrapper">
+  <div class="concept-background-image" style="background-image: linear-gradient(-225deg, rgba(145, 136, 154, 0.18) 0%, rgba(12, 15, 15, 0.5) 0%), url('<%= image_path('parisjungle2.jpg')%>');">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+          <div class="brand-concept">
+            <h1>Offres <br> et <br>Tarifs</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-
+    <div class="offer-content">
+      <div class="row">
+        <div class="col-xs-12 col-md-7 col-md-offset-1">
+          <h2 class="highlight">GRATUIT</h2>
+          <h3>Vous êtes une <b>Startup</b> ou un <b>Grand Groupe</b> à la recherche d’espaces de travail flexibles ? </h3>
+          <p>Vous pouvez <b>gratuitement</b> :</p>
+          <p> - Consulter les <b>offres</b> en ligne</p>
+          <p> - Discuter via la <b>messagerie</b> pour organiser une visite ou poser des questions</p>
+          <p> - Demander des <b>devis personnalisés</b> aux propriétaires des espaces</p>
+          <p> - Être accompagné lors des <b>visites</b></p>
+          <p> - Bénéficier des <b>paiements automatisés</b> par virement sécurisés</p>
+          <p>Nos équipes vous facilitent l’accès aux informations et à la compréhension des différents services proposés.</p>
+        </div>
+        <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
+            <%= image_tag 'Chair-4.svg', width: 200, height: 200 %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
+            <%= image_tag 'Analytics.svg', width: 200, height: 200 %>
+        </div>
+        <div class="col-xs-12 col-md-7 col-md-offset-1">
+          <h2 class="highlight">CONSULTING</h2>
+          <h3>Besoin de <b>conseils</b> pour choisir la meilleure solution pour vos équipes ? </h3>
+          <p>Remplissez <b>gratuitement</b> votre cahier des charges dans la <b>recherche spécifique</b></p>
+          <p>Nous proposons sur <b>devis personnalisé</b> (nous contacter) :</p>
+          <p> - <b>Analyse de l’existant</b> et élaboration d’un cahier des charges exhaustif</p>
+          <p> - <b>Analyse du marché</b> (contexte et offres disponibles)</p>
+          <p> - Visites des espaces et élaboration d’une <b>short list</b></p>
+          <p> - Accompagnement à la rédaction de <b>lettres d’intérêt</b> et à la <b>négociation</b></p>
+          <p> - <b>Benchmarks financiers</b> des alternatives</p>
+          <p> - <b>Recommandations</b> commerciales sur les engagements contractuels</p>
+          <p>Un consultant expérimenté en immobilier d’entreprise vous accompagne tout au long du projet.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-7 col-md-offset-1">
+          <h2 class="highlight">PROPRIETAIRES</h2>
+          <h3>Vous voulez proposer des <b>espaces de travail</b> (Coworking, bureaux, centre d’affaires, entreprise, hôtel)  ? </h3>
+          <p>Créez et diffusez <b>gratuitement</b> votre annonce en ligne</p>
+          <p>Nous proposons tout inclus  :</p>
+          <p> - Une <b>interface de gestion</b> des demandes et des devis</p>
+          <p> - L’accompagnement des <b>demandes qualifiées</b> pour la visite des espaces</p>
+          <p> - La <b>gestion des paiements</b> et des facturations récurrentes</p>
+          <p> - <b>Rapports périodiques</b> de commercialisation (digital et physique)</p>
+          <p> - Recommandations sur le <b>positionnement</b></p>
+          <h3>Nos honoraires sont de <b>10%</b> du montant du loyer, uniquement <b>au succès</b> et sur la période d’engagement <em>(n’excédant pas 1 an)</em>.</h3>
+        </div>
+        <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
+          <%= image_tag 'Tower.svg', width: 200, height: 200 %>
+        </div>
       </div>
     </div>
   </div>
