--- a/app/views/pages/concept.html.erb
+++ b/app/views/pages/concept.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
         <div class="brand-concept">
-          <h1>The <br> Real Estate <br> Jungle</h1>
+          <h1>Le <br>Concept</h1>
         </div>
       </div>
     </div>
