--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,9 @@
               </li>
               <li><%= link_to "Concept", pages_concept_path, class: "footer-links" %>
               </li>
-              <li><%= link_to "Tarifs", pages_tarifs_path, class: "footer-links" %>
+              <li><%= link_to "Offres & Tarifs", pages_tarifs_path, class: "footer-links" %>
+              </li>
+              <li><%= link_to "CGU", pages_cgu_path, class: "footer-links" %>
               </li>
             </ul>
           </div>
