--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -44,12 +44,14 @@ border-radius: 5px;
 .card h2 {
   font-family: $body-font;
   font-size: 25px;
+  font-weight: 300;
 }
 
 .card p {
   font-family: $body-font;
   font-size: 15px;
   text-align: center;
+  font-weight: 200;
   // letter-spacing: 1px;
 }
 
