--- a/app/views/coworkings/_card.html.erb
+++ b/app/views/coworkings/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="content-wrapper">
+<!-- <div class="content-wrapper"> -->
   <div class="card-coworking" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0)),url('<%= image_url %>')">
     <%= link_to "", coworking_path(coworking), class:"card-link" %>
     <div class="card-category"><%= coworking.name %></div>
@@ -19,4 +19,4 @@
       <p><%= coworking.surface %> m²</p>
     </div>
   </div>
-</div>
+<!-- </div> -->
