--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Montserrat|Open+Sans:300,400,700|Roboto:400,900');
+@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Montserrat:100,200,300,400,600|Open+Sans:300,400,700|Roboto:100,300,400,900');
 
 // Define fonts for body and headers
 $body-font: "Montserrat", "sans-serif";
