--- a/app/assets/stylesheets/coworkings/_coworking-list.scss
+++ b/app/assets/stylesheets/coworkings/_coworking-list.scss
@@ -54,7 +54,7 @@
       font-size: 12px;
       width: auto;
       padding: 10px 10px;
-      font-family: "Montserrat", "sans-serif";
+      font-family: $body-font;
       -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
       box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
       border: 1px solid rgba(0, 0, 0, 0.1);
