--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -21,7 +21,7 @@
           <p> - Discuter via la <b>messagerie</b> pour organiser une visite ou poser des questions</p>
           <p> - Demander des <b>devis personnalisés</b> aux propriétaires des espaces</p>
           <p> - Être accompagné lors des <b>visites</b></p>
-          <p> - Bénéficier des <b>paiements automatisés</b> par virement sécurisés</p>
+          <p> - Bénéficier des <b>paiements automatisés</b> par virements sécurisés</p>
           <p>Nos équipes vous facilitent l’accès aux informations et à la compréhension des différents services proposés.</p>
         </div>
         <div class="col-xs-12 col-md-4 hidden-sm hidden-xs">
@@ -36,11 +36,11 @@
           <h2 class="highlight">CONSULTING</h2>
           <h3>Besoin de <b>conseils</b> pour choisir la meilleure solution pour vos équipes ? </h3>
           <p>Remplissez <b>gratuitement</b> votre cahier des charges dans la <b>recherche spécifique</b></p>
-          <p>Nous proposons sur <b>devis personnalisé</b> (nous contacter) :</p>
+          <p>Nous proposons, sur <b>devis personnalisé</b> (nous contacter) :</p>
           <p> - <b>Analyse de l’existant</b> et élaboration d’un cahier des charges exhaustif</p>
           <p> - <b>Analyse du marché</b> (contexte et offres disponibles)</p>
-          <p> - Visites des espaces et élaboration d’une <b>short list</b></p>
-          <p> - Accompagnement à la rédaction de <b>lettres d’intérêt</b> et à la <b>négociation</b></p>
+          <p> - Présélection, visites et élaboration d’une <b>short list</b></p>
+          <p> - Assistance à la <b>négociation</b></p>
           <p> - <b>Benchmarks financiers</b> des alternatives</p>
           <p> - <b>Recommandations</b> commerciales sur les engagements contractuels</p>
           <p>Un consultant expérimenté en immobilier d’entreprise vous accompagne tout au long du projet.</p>
