--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,6 +1,6 @@
 <p>Bonjour <%= @user.first_name %>,</p>
 <p>Bienvenue dans la jungle immobilière.</p>
-<p>Vous pouvez commencer à rechercher les espaces de travail flexibles sur notre site en cliquanr sur le lien suivant :</p>
+<p>Vous pouvez commencer à rechercher les espaces de travail flexibles sur notre site en cliquant sur le lien suivant :</p>
 <%= link_to "Rechercher mes nouveaux bureaux", root_url %>
 <p>Vous pouvez dès à présent partager avec nous votre recherche immobilière en cliquant sur le lien ci-dessous :</p>
 <%= link_to "Décrivez-nous vos besoins immobiliers", new_demand_url %>
@@ -9,7 +9,7 @@
 <p>Au plaisir de vous rencontrer bientôt pour faire avancer vos projets immobiliers.</p>
 <em>Gautier Weigert</em>
 <br>
-<em>Founder et CEO</em>
+<em>Founder</em>
 <br>
 <em>Tél: 06 17 98 75 96</em>
 <br>
