--- a/app/views/devise/shared/_socialnetworkslinks.html.erb
+++ b/app/views/devise/shared/_socialnetworkslinks.html.erb
@@ -1,7 +1,7 @@
 <%- if devise_mapping.omniauthable? %>
     <ul class="list-inline text-center">
       <%- resource_class.omniauth_providers.each do |provider| %>
-      <li><%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class:"btn btn-primary list-inline"%>
+      <li><%= link_to "S'identifier avec #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class:"btn btn-primary list-inline"%>
       </li>
       <% end -%>
     </ul>
