--- a/app/views/briefs/_my_briefs.html.erb
+++ b/app/views/briefs/_my_briefs.html.erb
@@ -3,7 +3,10 @@
     <% unless current_user.owner %>
     <!-- condition owner true or false  -->
     <!-- début de l'itération user n'est pas owner  -->
+    <% if current_user.briefs.blank? %>
+    <% else %>
     <%= render 'briefs/brief_if_user_is_not_owner' %>
+    <% end %>
     <!-- fin du contenu si user n'est pas owner -->
     <% else %>
     <!-- début de l'itération user est owner  -->
